--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
     </licenses>
 
     <properties>
+        <jmh.version>1.37</jmh.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
@@ -44,6 +45,7 @@
         <maven-site-plugin.version>4.0.0-M9</maven-site-plugin.version>
 
         <jacoco-maven-plugin.version>0.8.10</jacoco-maven-plugin.version>
+
     </properties>
 
     <dependencyManagement>
@@ -67,6 +69,19 @@
     </dependencyManagement>
 
     <dependencies>
+        <!-- JMH -->
+        <dependency>
+            <groupId>org.openjdk.jmh</groupId>
+            <artifactId>jmh-core</artifactId>
+            <version>${jmh.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjdk.jmh</groupId>
+            <artifactId>jmh-generator-annprocess</artifactId>
+            <version>${jmh.version}</version>
+            <scope>provided</scope>
+        </dependency>
+
         <dependency>
             <groupId>org.jetbrains</groupId>
             <artifactId>annotations</artifactId>
@@ -95,7 +110,10 @@
             <version>${assertj.version}</version>
             <scope>test</scope>
         </dependency>
+
+
     </dependencies>
+
 
     <build>
         <plugins>
